# monorepo

./: .gitignore  .readiness.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUZZING.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES.md  SECURITY.md  alias_impl  clippy.toml  codecov.yml  coding_diff.patch  cooldown.toml  foundry.toml  index.html  justfile  loop_test  nextest.toml  pr-description.md  rustfmt.toml  test_gfni  test_ready  test_simd  zepter.yaml
actor/: Cargo.toml  README.md
actor/fuzz/: Cargo.toml
actor/fuzz/fuzz_targets/: mailbox.rs  mailbox_coalesce.rs  mailbox_fifo.rs
actor/fuzz/src/: lib.rs
actor/macros/: Cargo.toml  README.md
actor/macros/src/: lib.rs
actor/src/: lib.rs  mailbox.rs  service.rs  source.rs
actor/src/benches/: bench.rs  mailbox.rs  throughput.rs
actor/src/service/: builder.rs  driver.rs  mod.rs  types.rs
broadcast/: Cargo.toml  README.md  build.rs
broadcast/fuzz/: Cargo.toml
broadcast/fuzz/fuzz_targets/: broadcast_engine_operations.rs  (+2 more)
broadcast/src/: lib.rs
channel/: Cargo.toml
channel/src/: lib.rs
codec/: Cargo.toml  README.md  codec_conformance.toml  conformance.toml
codec-derive/: Cargo.toml  README.md
codec-derive/src/: lib.rs
codec/examples/: checksummed.rs
codec/fuzz/: Cargo.toml  README.md
codec/macros/: Cargo.toml  README.md
codec/macros/src/: lib.rs
codec/src/: buffer.rs  codec.rs  config.rs  conformance.rs  debug_test.rs  decoder.rs  error.rs  extensions.rs  lib.rs  manual_test.rs  test_expand.rs  types.rs  util.rs  varint.rs
codec/tests/: debug_derive.rs  derive_test.rs  fixed_size_derive_errors.rs  generic_derive_test.rs
coding/: Cargo.toml  PERFORMANCE.md  README.md  conformance.toml
coding/fuzz/: Cargo.toml
coding/proptest-regressions/: field.txt  poly.txt
coding/src/: field.rs  lib.rs  no_coding.rs  ntt.rs  poly.rs  raptor.rs  reed_solomon.rs  reed_solomon_gf8.rs  simd.rs  zoda.rs
collector/: Cargo.toml  README.md
collector/fuzz/: Cargo.toml
collector/src/: lib.rs
commitment/: Cargo.toml  README.md  bench.sh
commitment/benches/: commitment.rs
commitment/examples/: profile.rs
commitment/src/: config.rs  da.rs  encode.rs  error.rs  lib.rs  proof.rs  prover.rs  transcript.rs  utils.rs  verifier.rs
commitment/tests/: zcli_compat.rs
conformance/: Cargo.toml  README.md
conformance/macros/: Cargo.toml  README.md
conformance/src/: lib.rs
consensus/: Cargo.toml  README.md  build.rs  codec_conformance.toml  conformance.toml
consensus-sqlx/: Cargo.toml
consensus-sqlx/src/: lib.rs  votes.rs
consensus/fuzz/: Cargo.toml  README.md
consensus/quint/: .gitignore  README.md  automaton.qnt  itf_n4f1b1.qnt  main_n4f1b0.qnt  main_n4f1b0_tla.qnt  main_n4f1b1.qnt  main_n5f1b1.qnt  makefile  option.qnt  replica.qnt  replica_tla.qnt  twins_n4f1b1.qnt  types.qnt
consensus/src/: digest_payload.rs  elector.rs  lib.rs  mocks.rs  reporter.rs  sha256.rs  shared.rs  tuple.rs  types.rs  utils.rs
cryptography/: Cargo.toml  README.md  build.rs  codec_conformance.toml  conformance.toml
cryptography/benches/: bench.rs  ed25519_batch_verify_multiple_messages.rs  ed25519_batch_verify_multiple_public_keys.rs  ed25519_signature_verification.rs
cryptography/fuzz/: Cargo.toml
cryptography/quint/: README.md  defs.qnt  dkg.qnt  main_n4f1b0.qnt  main_n4f1b1.qnt  main_n4f1p1.qnt  main_n7f2b0.qnt  main_n7f2b2.qnt  makefile  option.qnt  types.qnt
cryptography/src/: banderwagon.rs  bloomfilter.rs  certificate.rs  checksummed.rs  crc32.rs  ed25519.rs  handshake.rs  lib.rs  secp256r1.rs  secret.rs  sha256.rs  transcript.rs  utils.rs
deployer/: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.localstack.yml
deployer/scripts/: test-localstack.sh
deployer/src/: aws.rs  lib.rs  main.rs  services.rs  setup.rs  teardown.rs  utils.rs
deployer/tests/: README.md  ec2_localstack.rs  integration_test.rs  performance_test.rs
executor/: Cargo.toml  README.md
executor/src/: deterministic.rs  lib.rs  tokio.rs  utils.rs
formatting/: Cargo.toml  README.md
formatting/src/: hex_literal.rs  lib.rs
glue/: Cargo.toml  README.md  STATE_SYNC.md  TEST_HARNESS.md  conformance.toml
glue/src/: lib.rs
invariants/: Cargo.toml  README.md
invariants/src/: lib.rs  minifuzz.rs
macros/: Cargo.toml  README.md  build.rs
macros-test/: Cargo.toml  README.md
macros-test/src/: lib.rs
macros-test/tests/: select.rs  test_async.rs  test_traced.rs
macros/impl/: Cargo.toml  README.md  build.rs
macros/src/: lib.rs  nextest.rs
macros/tests/: basic.rs  ready.rs  select.rs  stability.rs  test_async.rs  test_traced.rs  test_with_logging.rs
math/: Cargo.toml  README.md  conformance.toml
math/benches/: interpolation.rs  ntt.rs
math/fuzz/: Cargo.toml
math/proptest-regressions/: algebra.txt  ntt.txt  poly.txt
math/src/: algebra.rs  lib.rs  ntt.rs  poly.rs  synthetic.rs  tangle.rs  test.rs
p2p/: Cargo.toml  README.md  build.rs  conformance.toml
p2p/fuzz/: Cargo.toml
p2p/src/: channels.rs  config.rs  core.rs  ip.rs  lib.rs  metrics.rs  network.rs  request_manager.rs  requester.rs  types.rs  wire.proto
parallel/: Cargo.toml  README.md
parallel/src/: lib.rs  policy.rs
privacy/: Cargo.toml  README.md
privacy/src/: lib.rs  mocks.rs  payments.rs
proc-macros/: Cargo.toml  README.md
proc-macros/src/: lib.rs
resolver/: Cargo.toml  README.md  build.rs  conformance.toml
resolver/fuzz/: Cargo.toml
resolver/src/: delivery.rs  direct.rs  ingress.rs  lib.rs  opaque.rs  subscribers.rs
restaking/: Cargo.toml  build.rs
restaking/src/: lib.rs
restaking/testutils/: operator_state_retriever.sol
runtime/: Cargo.toml  README.md  conformance.toml
runtime/fuzz/: Cargo.toml
runtime/macros/: Cargo.toml  README.md
runtime/src/: deterministic.rs  hash.rs  iobuf.rs  lib.rs  macros.rs  metrics.rs  mock_channel.rs  mocks.rs  rwlock.rs  spawn_macros.rs  tokio.rs  utils.rs
status/: Cargo.toml
status/src/: dependency.rs  error.rs  inheritance.rs  lib.rs  main.rs  marker.rs  output.rs  scanner.rs  validator.rs
storage-core/: Cargo.toml
storage-core/src/: lib.rs
(+3589 files in other folders)
