[workspace]
members = [
    "broadcast",
    "codec",
    "coding",
    "collector",
    "conformance",
    "conformance/macros",
    "consensus",
    "cryptography",
    "deployer",
    "macros",
    "macros/impl",
    "math",
    "p2p",
    "parallel",
    "resolver",
    "runtime",
    "storage",
    "stream",
    "test",
    "utils",
    "examples/bridge",
    "examples/chat",
    "examples/estimator",
    "examples/flood",
    "examples/log",
    "examples/sync",
    "examples/reshare",

    # Fuzz builds
    "broadcast/fuzz",
    "codec/fuzz",
    "coding/fuzz",
    "collector/fuzz",
    "consensus/fuzz",
    "cryptography/fuzz",
    "math/fuzz",
    "p2p/fuzz",
    "runtime/fuzz",
    "stream/fuzz",
    "storage/fuzz",
    "utils/fuzz"
]
resolver = "2"

[workspace.package]
version = "2026.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://commonware.xyz"
rust-version = "1.91.1"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(full_bench)', 'cfg(generate_conformance_tests)', 'cfg(commonware_stability_BETA)', 'cfg(commonware_stability_GAMMA)', 'cfg(commonware_stability_DELTA)', 'cfg(commonware_stability_EPSILON)', 'cfg(commonware_stability_RESERVED)'] }
unused-must-use = "deny"
rust-2018-idioms = "deny"
warnings = "deny"

[workspace.lints.clippy]
missing-const-for-fn = "warn"
use-self = "warn"
redundant-clone = "warn"
option-if-let-else = "warn"
disallowed_types = "deny"
disallowed_macros = "deny"
undocumented_unsafe_blocks = "deny"
unused-async = "warn"
# This generates false positives for methods that are correct, and the contortions
# to avoid triggering this method make the code worse.
suspicious_op_assign_impl = "allow"

[workspace.dependencies]
anyhow = { version = "1.0.99", default-features = false }
arbitrary = "1.4.1"
aws-config = "1.8.12"
aws-lc-rs = "1.15.2"
aws-sdk-ec2 = "1.200.0"
aws-sdk-s3 = "1.91.0"
axum = "0.8.1"
blake3 = { version = "1.8.2", default-features = false }
blst = { version = "0.3.13", default-features = false }
bytes = { version = "1.7.1", default-features = false }
cfg-if = "1.0.0"
chacha20poly1305 = { version = "0.10.1", default-features = false }
chrono = "0.4.39"
clap = "4.5.18"
colored = "3.0.0"
commonware-broadcast = { version = "2026.2.0", path = "broadcast" }
commonware-codec = { version = "2026.2.0", path = "codec", default-features = false }
commonware-coding = { version = "2026.2.0", path = "coding" }
commonware-collector = { version = "2026.2.0", path = "collector" }
commonware-conformance = { version = "2026.2.0", path = "conformance" }
commonware-conformance-macros = { version = "2026.2.0", path = "conformance/macros" }
commonware-consensus = { version = "2026.2.0", path = "consensus" }
commonware-cryptography = { version = "2026.2.0", path = "cryptography", default-features = false }
commonware-deployer = { version = "2026.2.0", path = "deployer", default-features = false }
commonware-macros = { version = "2026.2.0", path = "macros", default-features = false }
commonware-macros-impl = { version = "2026.2.0", path = "macros/impl" }
commonware-math = { version = "2026.2.0", path = "math", default-features = false }
commonware-p2p = { version = "2026.2.0", path = "p2p" }
commonware-parallel = { version = "2026.2.0", path = "parallel", default-features = false }
commonware-resolver = { version = "2026.2.0", path = "resolver" }
commonware-runtime = { version = "2026.2.0", path = "runtime" }
commonware-storage = { version = "2026.2.0", path = "storage", default-features = false }
commonware-stream = { version = "2026.2.0", path = "stream" }
commonware-test = { version = "2026.2.0", path = "test" }
commonware-utils = { version = "2026.2.0", path = "utils", default-features = false }
console-subscriber = "0.5.0"
crc = "3.4.0"
crc-fast = { version = "1.10.0", default-features = false }
criterion = "0.7.0"
crossbeam-queue = "0.3.12"
crossterm = "0.29.0"
ctutils = "0.3.1"
ecdsa = { version = "0.16.9", default-features = false }
ed25519-consensus = { version = "2.1.0", default-features = false }
ed25519-zebra = "4.1.0"
either = "1.13.0"
futures = "0.3.31"
futures-timer = "3.0.3"
futures-util = "0.3.31"
governor = "0.10.2"
hashbrown = { version = "0.16.1", default-features = false, features = ["default-hasher"] }
io-uring = "0.7.4"
libc = "0.2.172"
libfuzzer-sys = "0.4.9"
num-bigint = { version = "0.4.6", default-features = false }
num-integer = "0.1.46"
num-rational = { version = "0.4.2", features = ["num-bigint"] }
num-traits = { version = "0.2.19", default-features = false }
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
p256 = { version = "0.13.2", default-features = false }
parking_lot = "0.12.5"
paste = "1.0.15"
pin-project = "1.1.10"
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0"
prometheus-client = "0.24.0"
proptest = "1.8.0"
proptest-derive = "0.5.1"
prost = "0.14.1"
prost-build = "0.14.1"
quote = "1.0"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = "0.6.4"
rand_distr = "0.4.3"
ratatui = "0.29.0"
rayon = { version = "1.10.0", default-features = false }
reed-solomon-simd = "3.1.0"
reqwest = "0.12.12"
rstest = "0.26.1"
serde = "1.0.218"
serde_json = "1.0.122"
serde_yaml = "0.9.34"
sha2 = { version = "0.10.8", default-features = false }
syn = "2.0.0"
sysinfo = "0.37.2"
thiserror = { version = "2.0.12", default-features = false }
tokio = "1.43.0"
toml = "0.9.8"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.19"
uuid = "1.15.1"
x25519-dalek = "2.0.1"
zeroize = "1.5.7"
zstd = "0.13.2"

[profile.bench]
# Because we enable overflow checks in "release," we should benchmark with them.
overflow-checks = true

[profile.dev]
# Although overflow checks are enabled by default in "dev", we explicitly
# enable them here for clarity.
overflow-checks = true

[profile.release]
# To guard against unexpected behavior in production, we enable overflow checks in
# "release" although they incur some performance penalty.
overflow-checks = true

[profile.release-with-debug]
inherits = "release"
# Setting debug to true instructs cargo to include debug symbols in the release
# binary (not to disable optimizations).
debug = true

[profile.test]
# Although overflow checks are enabled by default in "test", we explicitly
# enable them here for clarity.
overflow-checks = true
