[package]
name = "commonware-actor"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Safely coordinate concurrent components."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/actor"
documentation = "https://docs.rs/commonware-actor"

[lints]
workspace = true

[dependencies]
cfg-if.workspace = true
commonware-macros.workspace = true
crossbeam-queue.workspace = true
futures-util.workspace = true
loom = { workspace = true, features = ["futures"], optional = true }
parking_lot.workspace = true

[dev-dependencies]
commonware-utils.workspace = true
criterion.workspace = true
futures.workspace = true

[features]
loom = [ "dep:loom" ]

[lib]
bench = false

[[bench]]
name = "mailbox"
harness = false
path = "src/benches/bench.rs"
