[package]
name = "commonware-broadcast"
edition = "2021"
publish = true
version = "0.0.7"
license = "MIT OR Apache-2.0"
description = "Disseminate data over a wide-area network."
readme = "README.md"
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/monorepo/tree/main/broadcast"
documentation = "https://docs.rs/commonware-broadcast"

[dependencies]
bytes = { workspace = true }
commonware-utils = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }

[lib]
bench = false
