[package]
name = "commonware-broadcast"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Disseminate data over a wide-area network."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/broadcast"
documentation = "https://docs.rs/commonware-broadcast"

[dependencies]
bytes.workspace = true
commonware-codec.workspace = true
commonware-cryptography.workspace = true
commonware-macros.workspace = true
commonware-p2p.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true
futures.workspace = true
prometheus-client.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[lib]
bench = false
