[package]
name = "commonware-codec-derive"
edition = "2021"
publish = true
version = "0.0.54"
license = "MIT OR Apache-2.0"
description = "Derive macros for commonware-codec traits."
readme = "README.md"
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/monorepo/tree/main/codec-derive"
documentation = "https://docs.rs/commonware-codec-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
commonware-codec = { workspace = true }
bytes = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["commonware-codec", "bytes"]