[package]
name = "commonware-codec"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Serialize structured data."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/codec"
documentation = "https://docs.rs/commonware-codec"

[lints]
workspace = true

[features]
default = [ "std" ]
std = [ "bytes/std", "thiserror/std" ]

[dependencies]
bytes.workspace = true
paste.workspace = true
thiserror.workspace = true
