[package]
name = "commonware-codec"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Serialize structured data."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/codec"
documentation = "https://docs.rs/commonware-codec"

[lints]
workspace = true

[features]
default = [ "std" ]
std = [
	"bytes/std",
	"rand?/std",
	"rand_chacha?/std",
	"sha2?/std",
	"thiserror/std",
]
arbitrary = [
	"dep:arbitrary",
	"dep:commonware-macros",
	"dep:rand",
	"dep:rand_chacha",
	"dep:serde",
	"dep:sha2",
	"dep:toml",
]

[dependencies]
arbitrary = { workspace = true, optional = true }
bytes.workspace = true
commonware-macros = { workspace = true, optional = true }
paste.workspace = true
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sha2 = { workspace = true, optional = true }
thiserror.workspace = true
toml = { workspace = true, optional = true }
