[package]
name = "commonware-coding"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Encode data to enable recovery from a subset of fragments."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/coding"
documentation = "https://docs.rs/commonware-coding"

[dependencies]
bytes.workspace = true
commonware-codec = { workspace = true, features = ["std"] }
commonware-cryptography = { workspace = true, features = ["std"] }
commonware-storage = { workspace = true, features = ["std"] }
commonware-utils = { workspace = true, features = ["std"] }
futures.workspace = true
num-rational.workspace = true
rand.workspace = true
rand_core.workspace = true
rayon.workspace = true
reed-solomon-simd.workspace = true
thiserror.workspace = true

[lib]
bench = false

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[[bench]]
name = "coding_scheme_times"
harness = false
path = "src/benches/bench.rs"

[[bench]]
name = "coding_scheme_sizes"
harness = false
path = "src/benches/bench_size.rs"
