[package]
name = "commonware-collector"
edition = "2021"
publish = true
version = "0.0.61"
license = "MIT OR Apache-2.0"
description = "Collect responses to committable requests."
readme = "README.md"
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/monorepo/tree/main/collector"
documentation = "https://docs.rs/commonware-collector"

[dependencies]
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-stream = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
governor = { workspace = true }
prometheus-client = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lib]
bench = false
