[package]
name = "commonware-collector"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Collect responses to committable requests."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/collector"
documentation = "https://docs.rs/commonware-collector"

[dependencies]
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-stream = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
governor = { workspace = true }
prometheus-client = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lib]
bench = false
