[package]
name = "commonware-conformance"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Utilities for conformance testing across commonware primitives."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/conformance"

[lints]
workspace = true

[dependencies]
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
toml.workspace = true
