[package]
name = "commonware-consensus-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Extensions to make commonware-consensus work with SQLx."

[dependencies]
blake3.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-runtime.workspace = true
futures.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
tracing.workspace = true

[lints]
workspace = true
