[package]
name = "commonware-consensus"
edition = "2021"
publish = true
version = "0.0.61"
license = "MIT OR Apache-2.0"
description = "Order opaque messages in a Byzantine environment."
readme = "README.md"
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/monorepo/tree/main/consensus"
documentation = "https://docs.rs/commonware-consensus"

[dependencies]
commonware-codec = { workspace = true }
commonware-broadcast = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-resolver = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
prometheus-client = { workspace = true }
governor = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
commonware-resolver = { workspace = true, features = ["mocks"] }
tracing-subscriber = { workspace = true }

[lib]
bench = false
crate-type = ["rlib", "cdylib"]
