[package]
name = "commonware-consensus"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Order opaque messages in a Byzantine environment."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/consensus"
documentation = "https://docs.rs/commonware-consensus"

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
bytes.workspace = true
cfg-if.workspace = true
commonware-broadcast.workspace = true
commonware-codec.workspace = true
commonware-cryptography.workspace = true
commonware-resolver.workspace = true
commonware-utils.workspace = true
futures.workspace = true
rand.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
commonware-macros.workspace = true
commonware-p2p.workspace = true
commonware-runtime.workspace = true
commonware-storage = { workspace = true, features = ["std"] }
governor.workspace = true
pin-project.workspace = true
prometheus-client.workspace = true
rand_distr.workspace = true
tracing.workspace = true

[dev-dependencies]
commonware-conformance.workspace = true
commonware-resolver = { workspace = true, features = ["mocks"] }
rstest.workspace = true
tracing-subscriber.workspace = true

[lib]
bench = false
crate-type = ["rlib", "cdylib"]

[features]
fuzz = []
arbitrary = [
	"commonware-codec/arbitrary",
	"commonware-cryptography/arbitrary",
	"dep:arbitrary",
]
